[package]
name = "rustmem"
version = "0.1.0"
edition = "2021"
description = "A lightweight Rust alternative to mem0 — long-term memory for AI agents"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
config = { version = "0.14", default-features = false, features = ["toml"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
